[FIX] account: hide search panel expand/fold button in chart of accounts
This commit hides the expand/fold button of the search panel in the chart
of accounts because it overlaps with the search panel buttons and is not
useful in this case.

closes odoo/odoo#165811

X-original-commit: d083ebf034dcff99a9ab2dd656cbf566202ac22e

--- a/addons/account/static/src/scss/account_searchpanel.scss
+++ b/addons/account/static/src/scss/account_searchpanel.scss
@@ -1,6 +1,11 @@
 .o_search_panel.account_root {
     padding: 6px !important; // need to override bootstrap ps-4 rule
     scrollbar-width: thin;
+    min-width: 55px;
+    > button:first-child {
+        // hide the expand/fold button
+        display: none;
+    }
     .o_search_panel_section_header {
         display: none;
     }
